--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </title>
 </head>
 <body>
-    
+    <h1>I am learning web development </h1>
+    <h2>this is very interesting</h2>
+    <p>i Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, saepe. Sequi reprehenderit quidem quo odit consequuntur nesciunt quam recusandae eveniet? Mollitia voluptate aperiam cupiditate commodi similique facilis at illum ipsum?</p>
 </body>
 </html>
